# AngeronaSuite

./: .env.example  .gitignore  ANGERONA_CAPABILITIES.md  Angerona_Capabilities_Bragsheet.docx  Angerona_System_Flow.docx  CONTRIBUTING.md  Install-Angerona-Release.bat  Install-Angerona-Release.ps1  Install-Angerona.bat  Kill All Angerona.lnk  LICENSE  PRIVACY.md  README.md  SECURITY.md  STREAMLINE_SUMMARY.md  UPGRADES_BACKLOG.md  angerona.manifest.template  apply-icons.bat  apply-icons.ps1  backup_to_F.bat  blackbox_recorder.py  build.bat  cleanup.ps1  constraints-release.txt  create-blackbox-launcher.bat  create-blackbox-launcher.ps1  create-push-shortcut.bat  create-push-shortcut.ps1  finalize-and-deploy.ps1  flow_canvas.html  git-init.bat  install.bat  kill-all-angerona.bat  llms.txt  mitigation_gate.ps1  pull-model-to-D.ps1  push-to-github.bat  pyproject.toml  pytest.ini  requirements.txt  (+9 more)
analysis/: Angerona_Capabilities_Bragsheet.docx  Angerona_Capabilities_Bragsheet_v1.8.0.docx  Angerona_Capability_Doc_v1.6.1.docx  Angerona_Capability_Doc_v1.7.1.docx  Angerona_Capability_Doc_v1.7.3.docx  Angerona_Capability_Doc_v1.7.4.docx  Angerona_Capability_Doc_v1.7.6.docx  Angerona_Capability_Doc_v1.8.0.docx  Angerona_Master_Manual_v1.6.1.docx  Angerona_Master_Manual_v1.7.1.docx  Angerona_Master_Manual_v1.7.3.docx  Angerona_Master_Manual_v1.7.4.docx  Angerona_Master_Manual_v1.7.6.docx  Angerona_Master_Manual_v1.8.0.docx  Angerona_Security_Assessment_v2.0_2026-07-13.docx  Angerona_Security_Assessment_v2.2_2026-07-15.docx  Angerona_System_Flow_v1.6.1.docx  Angerona_System_Flow_v1.7.1.docx  Angerona_System_Flow_v1.7.3.docx  Angerona_System_Flow_v1.7.4.docx  Angerona_System_Flow_v1.7.6.docx  Angerona_System_Flow_v1.8.0.docx  README.md  llms.txt  (+6 more)
(+326 files in other folders)
